[package]
name = "airomem"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/makindotcc/airomem-rs"
categories = ["database-implementations"]
description = "Simple persistence library inspired by Prevayler and @jarekratajski"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["fs", "io-util", "sync", "time", "rt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
futures = { version = "0.3.30", default_features = false, features = [
    "executor",
] }

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
